# project-grafika-komputerowa

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
assets/: T_shark.glb  anchor_green.glb  big_shark.glb  close_chest.glb  fish_real_2.glb  fish_sledz.glb
assets/shaders/: particles.frag  particles.vert  pbr.frag  pbr.vert  screen.frag  screen.vert  shadow_depth.vert  skybox.frag  skybox.vert
src/: Anglerfish.cpp  Anglerfish.h  Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  GlLoader.cpp  GlLoader.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  PTF.cpp  PTF.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
